src/objects/Cash_Register__c.object
<CustomObject>
    <fields>
        <fullName>Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bag_number__c</fullName>
        <label>Bag number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Register__c</fullName>
        <label>Cash Register</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Back-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_at_End_of_Day__c</fullName>
        <formula>Multiplication100CC__c + Multiplication50CC__c + Multiplication20CC__c + Multiplication10CC__c + Multiplication5CC__c + Multiplication1CC__c + Multiplication050CC__c + Multiplication025CC__c + Multiplication010CC__c + Multiplication005CC__c+ Multiplication001CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash at End of Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_at_start_of_day_OP__c</fullName>
        <formula>X20_Multiplication__c + Multiplication10__c + Mulitiplication5__c + Multiplication5__c + Multiplication050__c + Multiplication025__c + Multiplication010__c + Multiplication005__c + Multiplication001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash at start of day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashierCC__c</fullName>
        <label>Cashier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_Opening_Count__c</fullName>
        <label>Cashier</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosingCount001__c</fullName>
        <label>$ 0.01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosingCount005__c</fullName>
        <label>$ 0.05</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosingCount010__c</fullName>
        <label>$ 0.10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosingCountt20__c</fullName>
        <label>$ 20.00</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_cash_balance__c</fullName>
        <label>Closing cash balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_F__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fields links the two objects(cash register and payment batch)</description>
        <label>Date_Lookup</label>
        <referenceTo>BGBK__Payment_Batch__c</referenceTo>
        <relationshipLabel>Cash Registers</relationshipLabel>
        <relationshipName>Cash_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_s_Total_Receipts_del__c</fullName>
        <formula>Total_Cash_in_Register_CC__c-Minus_startup_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day&apos;s Total Receipts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>$ 20.00</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>$ 10.00</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>$ 5.00</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Cashier__c</fullName>
        <label>Head Cashier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minus_startup_amount__c</fullName>
        <formula>X20_Multiplication__c + Multiplication10__c + Mulitiplication5__c + Multiplication5__c + Multiplication050__c + Multiplication025__c + Multiplication010__c + Multiplication005__c + Multiplication001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minus startup amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mulitiplication5__c</fullName>
        <formula>(5.00)*( Field3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication001CC__c</fullName>
        <formula>(0.01)*( ClosingCount001__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication001__c</fullName>
        <formula>(0.01)*( Field9__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication005CC__c</fullName>
        <formula>(0.05)*( ClosingCount005__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication005__c</fullName>
        <formula>(0.05)*( Field8__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication010CC__c</fullName>
        <formula>(0.10)*( ClosingCount010__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplication010__c</fullName>
        <formula>(0.10)*( Field7__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opening_cash_balance__c</fullName>
        <label>Opening cash balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Short__c</fullName>
        <formula>System_generated_cash_total__c- Day_s_Total_Receipts_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over/Short</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <label>Register</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Back-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Sent to Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Reconciler__c</fullName>
        <label>Supervisor/Reconciler</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_generated_cash_total__c</fullName>
        <label>System generated cash total</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_for_NCR_cash__c</fullName>
        <label>Total Amount for NCR-cash</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_for_NCR_check__c</fullName>
        <label>Total Amount for NCR-check</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_for_Vouchers__c</fullName>
        <label>Total Amount for Vouchers</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Cash__c</fullName>
        <label>Total Amount of Cash</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Cheque__c</fullName>
        <label>Total Amount of Cheque</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_in_Register_CC__c</fullName>
        <formula>Multiplication100CC__c + Multiplication50CC__c + Multiplication20CC__c + Multiplication10CC__c + Multiplication5CC__c + Multiplication1CC__c + Multiplication050CC__c + Multiplication025CC__c + Multiplication010CC__c + Multiplication005CC__c+ Multiplication001CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cash in Register</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment_w_o_vouchers__c</fullName>
        <formula>Total_Amount_of_Cash__c + Total_Amount_of_Cheque__c + Total_from_Vitalcheck__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment w/o vouchers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Receipts__c</fullName>
        <label>Total Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_from_Vitalcheck__c</fullName>
        <label>Total from Vitalcheck</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation_Room_Cash_Total__c</fullName>
        <label>Validation Room Cash Total</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation_Room_Cheque_Total__c</fullName>
        <label>Validation Room Cheque Total</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation_Room_Vitalcheck_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Validation Room Vitalcheck Total</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X20_Multiplication__c</fullName>
        <formula>(20.00)*(Field1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cash Register</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cash_Register__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Cash_at_start_of_day_OP__c</columns>
        <columns>Opening_cash_balance__c</columns>
        <columns>Closing_cash_balance__c</columns>
        <columns>Minus_startup_amount__c</columns>
        <columns>Cash_at_End_of_Day__c</columns>
        <columns>Total_Cash_in_Register_CC__c</columns>
        <columns>Total_Receipts__c</columns>
        <columns>CashierCC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Cash Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Registers</pluralLabel>
    <recordTypes>
        <fullName>Cash_Register</fullName>
        <active>true</active>
        <label>Cash Register</label>
    </recordTypes>
    <recordTypes>
        <fullName>Validation_Room</fullName>
        <active>true</active>
        <description>for closing/balancing validation room</description>
        <label>Validation Room</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>